// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisuallyHidden focusable version matches snapshot: focusable 1`] = `
.c0 {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  margin: 0 !important;
  overflow: hidden !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  border: 0 !important;
  white-space: nowrap !important;
}

.c0:active,
.c0:focus {
  position: static !important;
  width: auto !important;
  height: auto !important;
  margin: inherit !important;
  overflow: visible !important;
  -webkit-clip: auto !important;
  clip: auto !important;
  -webkit-clip-path: none !important;
  clip-path: none !important;
  white-space: inherit !important;
}

<VisuallyHidden
  focusable={true}
  important={true}
>
  <span
    className="c0"
    tabIndex="0"
  >
    Example
  </span>
</VisuallyHidden>
`;

exports[`VisuallyHidden matches snapshot: default render 1`] = `
.c0 {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  margin: 0 !important;
  overflow: hidden !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  border: 0 !important;
  white-space: nowrap !important;
  padding: 0 !important;
}

<VisuallyHidden
  focusable={false}
  important={true}
>
  <span
    className="c0"
  >
    Example
  </span>
</VisuallyHidden>
`;

exports[`VisuallyHidden with important={false} matches snapshot: not important 1`] = `
.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  border: 0;
  white-space: nowrap;
  padding: 0;
}

<VisuallyHidden
  focusable={false}
  important={false}
>
  <span
    className="c0"
  >
    Example
  </span>
</VisuallyHidden>
`;
